# symbolator

./: .gitignore  default.nix  flake.nix  pyproject.toml
symbolator/: __init__.py
